# HashMapSettings

./: Cargo.toml  LICENSE-MIT  README v0.5.0 .md  README.md
src/: account.rs  lib.rs  setting.rs
src/account/: incrementable_implementations.rs  mod.rs
src/stg/: mod.rs  setting_implementations.rs
src/types/: constants.rs  errors.rs  example_types.rs  mod.rs  rust_types.rs  rust_types_implementations.rs
