[package]
name = "hashmap_settings"
version = "0.3.0"
authors = ["OxidizedLoop"]
edition = "2021"
description = "HashMap wrapper for layered Settings"
license = "MIT OR Apache-2.0"
repository = "https://github.com/OxidizedLoop/HashMapSettings"
documentation = "https://docs.rs/hashmap_settings"
keywords = ["hashmap", "settings", "account"]
categories = ["config", "data-structures"]

[dependencies]
serde = {version ="1.0", features = ["derive"], optional = true}
dyn-clone = "1.0"
dyn_ord = "0.2.1"
typetag = "0.2"

[features]
serde = ["dep:serde"]

[unstable]
trait_upcasting = true