[package]
name = "hashmap_settings"
version = "0.5.0"
authors = ["OxidizedLoop"]
edition = "2021"
description = "HashMap wrapper for layered Settings"
license = "MIT OR Apache-2.0"
repository = "https://github.com/OxidizedLoop/HashMapSettings"
documentation = "https://docs.rs/hashmap_settings"
keywords = ["hashmap", "settings", "account"]
categories = ["config", "data-structures"]

[dependencies]
serde = {version ="1.0", features = ["derive"], optional = true}
dyn-clone = "1.0"
dyn_ord = "0.2.1"
typetag = {version = "0.2", optional = true}

[features]
default = []
serde = ["dep:serde","dep:typetag"]

[lints]
clippy.cargo = "warn"
clippy.complexity = "warn"
clippy.correctness = "warn"
clippy.pedantic = "warn"
clippy.doc_markdown = "allow"
clippy.nursery = "warn"
clippy.perf = "warn"
#clippy.restriction = "warn" should to be individually added 
clippy.style = "warn"
clippy.suspicious = "warn"
rust.missing_docs = "warn"

[unstable]
trait_upcasting = true